frontend:fix: fixed code and pre tag text align and direction

--- a/apps/frontend/src/styles/globals.css
+++ b/apps/frontend/src/styles/globals.css
@@ -10,6 +10,12 @@ body {
   direction: rtl;
 }
 
+code,
+pre {
+  direction: ltr;
+  text-align: left;
+}
+
 .svg-inline--fa {
   aspect-ratio: 1/1;
 }
